<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ru.nubby.notificatr.prefsutils.TimePreference
        android:key="time_start"
        android:title="@string/set_start_time_title"
        android:defaultValue="@string/time_default_value"
        app:iconSpaceReserved="false"/>

    <ru.nubby.notificatr.prefsutils.TimePreference
        android:key="time_end"
        android:title="@string/set_finish_time_title"
        android:defaultValue="@string/time_default_value"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        android:key="display_text"
        android:defaultValue="@string/notify_default_value"
        android:title="@string/notify_title"
        app:iconSpaceReserved="false"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="is_on"
        android:title="@string/turn_on_title"
        app:iconSpaceReserved="false"/>

</PreferenceScreen>